Add arith and shuffle projects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <script>
         // Replace here with the redirect to the actual PDF file
-        window.location.replace("https://thevedantmodi.github.io/resume/source.pdf");
+        window.location.replace("https://thevedantmodi.github.io/resume/resume.pdf");
     </script>
 </head>
 <body>
