--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Resume</title>
-    <style>
-        html, body, object {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
-    <script>
-        // Replace here with the redirect to the actual PDF file
-        window.location.replace("https://thevedantmodi.github.io/resume/resume.pdf");
-    </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Redirecting...</title>
+
+  <meta http-equiv="refresh" content="0; url=/resume.pdf" />
+
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 40px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    Waiting for the redirect!
+  <p>Redirecting to your resume…</p>
+  <p><a href="/resume.pdf">Click here</a> if you are not redirected automatically.</p>
 </body>
 </html>
